// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
  border: 1px solid rgba(102,119,136,.2);
  border-radius: 5px;
  padding: 3px;
}

.c0 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 4px;
  -webkit-font-smoothing: antialiased;
}

.c2::-webkit-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c2::-moz-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c2:-ms-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c2::placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    placeholder="input placeholder"
    type="text"
  />
</div>
`;

exports[`validation error is passed as a prop error is shown when input is valid 1`] = `
.c1 {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  box-sizing: border-box;
  border: 1px solid rgba(102,119,136,.2);
  border-radius: 5px;
  padding: 3px;
}

.c3 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 14px;
}

.c0 {
  display: grid;
  box-sizing: border-box;
  grid-gap: 4px;
  -webkit-font-smoothing: antialiased;
}

.c2::-webkit-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c2::-moz-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c2:-ms-input-placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

.c2::placeholder {
  color: rgba(102,119,136,.2);
  font-size: 1rem;
}

<div
  class="c0"
>
  <input
    class="c1 c2"
    placeholder="input placeholder"
    type="text"
  />
  <span
    class="c3"
  >
    test error
  </span>
</div>
`;
